Fix mobile black contrast mode

--- a/src/app/mobile.scss
+++ b/src/app/mobile.scss
@@ -51,7 +51,6 @@ body.is-mobile {
     --color-base-10: #242424;
     --color-base-20: #262626;
     --search-result-background: var(--background-primary);
-    --modal-sidebar-background: var(--mobile-sidebar-background);
   }
 
   .app-container {
